Add eductional section with discussion problem and java syntax highlighting

--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,15 @@ nav:
     link: "projects"
   - name: "Contact"
     link: "contact"
+  - name: "Educational"
+    link: "educational"
 
 # Build settings
 markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 plugins:
   - jekyll-feed
 
